2010-04-21  François Sausset  <sausset@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        Fix to take into account a change made in "StringImpl".
        https://bugs.webkit.org/show_bug.cgi?id=37763

        * mathml/RenderMathMLOperator.cpp:
        (WebCore::RenderMathMLOperator::updateFromElement):

Canonical link: https://commits.webkit.org/49330@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58049 268f45cc-cd09-0410-ab3c-d52691b4dbfc